files/cfn-template-and-maintf/bookstore.yaml
AWSTemplateFormatVersion: 2010-09-09
Description: |
  "this yaml file created for project-203 dockerization bookstore project"


Resources:
  securitygroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: This-security-group-created-for-bookstore-project # Required
      GroupName: bookstore-sec-group
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
  dockerec2:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: ami-0b0dcb5067f052a63
      InstanceType: t2.micro
      KeyName: ${key}
      SecurityGroupIds:
        - !GetAtt securitygroup.GroupId
      UserData: !Base64 |
            #! /bin/bash
            yum update -y
            yum install git -y
            amazon-linux-extras install docker -y
            systemctl start docker
            systemctl enable docker
            curl -L "https://github.com/docker/compose/releases/download/v2.12.2/docker-compose-$(uname -s)-$(uname -m)" \
            -o /usr/local/bin/docker-compose
            chmod +x /usr/local/bin/docker-compose
            cd /home/ec2-user
            git clone https://github.com/Nihatcan17/bookstore-project.git
            cd /home/ec2-user/bookstore-project/files/docker-files
            docker-compose up
Outputs:
  WebsiteURL:
    Description: Bookstoreurl
    Value: !Join 
      - ''
      - - 'http://'
        - !GetAtt 
          - dockerec2
          - PublicIp
    Export:
      Name: Bookstore
